--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
-html, body, #map {
+html,
+body,
+#map {
     height: 100%;
 }
 
 /* This is important so that bootstrap-select list goes over leaflet buttons
 Since the list is in navbar and leaflet buttons within map, we create a
 stacking context on their common ancestor */
-body, #content {
+body,
+#content {
     position: relative;
     z-index: 1;
 }
@@ -60,7 +63,7 @@ table.dataTable {
 
 .navbar {
     /* align with leaflet-control */
-    padding: .5rem 10px;
+    padding: 0.5rem 10px;
 }
 .navbar-brand {
     float: right;
@@ -118,7 +121,7 @@ footer {
 }
 
 .form-group {
-    margin-bottom: 0
+    margin-bottom: 0;
 }
 
 /*
@@ -133,25 +136,24 @@ footer {
 
 /* diagram colors lighter, less dominant */
 .steelblue-theme.leaflet-control.elevation .background {
-  background-color: rgba(105, 155, 196, 0.2);
+    background-color: rgba(105, 155, 196, 0.2);
 }
 .steelblue-theme.leaflet-control.elevation .axis path,
 .steelblue-theme.leaflet-control.elevation .axis line {
-  stroke: #8398aa;
-  shape-rendering: crispEdges;
+    stroke: #8398aa;
+    shape-rendering: crispEdges;
 }
 .steelblue-theme.leaflet-control.elevation .axis text {
-  fill: #8398aa;
+    fill: #8398aa;
 }
 .steelblue-theme.leaflet-control.elevation .area {
-  fill: #699bc4;
+    fill: #699bc4;
 }
 
 #elevation-btn {
     align-items: center;
     margin-right: 0.5rem;
 }
-
 
 .routing-draw-enabled {
     cursor: crosshair;
@@ -182,7 +184,8 @@ footer {
 }
 
 /* track messages (data tab) */
-#tab_data, .CodeMirror {
+#tab_data,
+.CodeMirror {
     font-size: x-small;
 }
 
@@ -237,7 +240,8 @@ https://css-tricks.com/svg-line-animation-works/
     width: 8px;
     margin-left: 1px;
     background-image: linear-gradient(to right, #f0f0f0 0%, #e9e9e9 100%);
-    box-shadow: inset -1px -0px 1px rgba(55, 55, 55, 0.3), inset 1px 0px 1px rgba(230, 230, 230, 1);
+    box-shadow: inset -1px -0px 1px rgba(55, 55, 55, 0.3),
+        inset 1px 0px 1px rgba(230, 230, 230, 1);
 }
 
 .control-slider:hover .slider-track,
@@ -246,7 +250,7 @@ https://css-tricks.com/svg-line-animation-works/
 }
 
 .slider-selection {
-    background-color: #C6C6C6;
+    background-color: #c6c6c6;
     background-image: none;
     box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.6);
 }
@@ -259,17 +263,21 @@ https://css-tricks.com/svg-line-animation-works/
     outline: none;
 
     /* bootstrap .btn-default */
-    background-image: linear-gradient(to bottom,#fff 0,#e0e0e0 100%);
+    background-image: linear-gradient(to bottom, #fff 0, #e0e0e0 100%);
     background-repeat: repeat-x;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15),
+        0 1px 1px rgba(0, 0, 0, 0.075);
     border: 1px solid #adadad;
 }
 
 /* activated Font Awesome icon and Bootstrap button
 (for EasyButton add ' active' to icon class property) */
-.fa.active, .btn.active, .btn.active:hover, .btn.active:focus {
+.fa.active,
+.btn.active,
+.btn.active:hover,
+.btn.active:focus {
     /* use same color as leaflet-locatecontrol */
-    color: #2074B6;
+    color: #2074b6;
 }
 
 .leaflet-bar button {
@@ -337,7 +345,7 @@ table.dataTable.hover tbody tr.even:hover,
 table.dataTable.display tbody tr:hover,
 table.dataTable.display tbody tr.odd:hover,
 table.dataTable.display tbody tr.even:hover {
-    background-color: rgba(255,255,0,0.2);
+    background-color: rgba(255, 255, 0, 0.2);
 }
 
 /*
@@ -360,9 +368,9 @@ table.dataTable.display tbody tr.even:hover {
 .editing-tooltip,
 .editing-tooltip-create {
     color: #fff;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     /* for direction arrows that inherit */
-    border-color: rgba(0,0,0,0.7);
+    border-color: rgba(0, 0, 0, 0.7);
     /* no border but still set a color for direction arrows */
     border-width: 0px;
 }
@@ -371,7 +379,7 @@ table.dataTable.display tbody tr.even:hover {
     border-color: transparent;
 }
 .leaflet-tooltip-bottom:before {
-	  border-bottom-color: inherit;
+    border-bottom-color: inherit;
 }
 .leaflet-tooltip-right:before {
     border-right-color: inherit;
@@ -424,11 +432,11 @@ table.dataTable.display tbody tr.even:hover {
 }
 
 .tree-code {
-    font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
+    font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console,
+        monospace;
     margin-right: 7px;
     color: #666; /* like root nodes, jstree-disabled */
 }
-
 
 /* hide currently unused bottom tabs container because of touch border artefacts */
 .leaflet-sidebar-tabs > ul:last-child {
@@ -436,7 +444,7 @@ table.dataTable.display tbody tr.even:hover {
 }
 
 /* layers svg icon not properly centered */
-.leaflet-sidebar-tabs > ul > li > a[href="#tab_layers_control"] {
+.leaflet-sidebar-tabs > ul > li > a[href='#tab_layers_control'] {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -454,7 +462,8 @@ table.dataTable.display tbody tr.even:hover {
 
     border: 1px solid #ddd;
 
-    font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
+    font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console,
+        monospace;
     line-height: 1.2em;
 }
 
