--- a/css/style.css
+++ b/css/style.css
@@ -65,11 +65,6 @@ table.dataTable {
     /* align with leaflet-control */
     padding: 0.5rem 10px;
 }
-.navbar-brand {
-    float: right;
-    margin-left: 1rem;
-    margin-right: 0;
-}
 .nav-link .fa {
     margin-right: 0.2em;
 }
@@ -262,7 +257,7 @@ https://css-tricks.com/svg-line-animation-works/
     background: none;
     outline: none;
 
-    /* bootstrap .btn-default */
+    /* bootstrap .btn-secondary */
     background-image: linear-gradient(to bottom, #fff 0, #e0e0e0 100%);
     background-repeat: repeat-x;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15),
@@ -270,14 +265,24 @@ https://css-tricks.com/svg-line-animation-works/
     border: 1px solid #adadad;
 }
 
-/* activated Font Awesome icon and Bootstrap button
-(for EasyButton add ' active' to icon class property) */
-.fa.active,
-.btn.active,
-.btn.active:hover,
-.btn.active:focus {
+/* activated Font Awesome icon (for EasyButton add ' active' to icon class property) */
+.fa.active {
     /* use same color as leaflet-locatecontrol */
     color: #2074b6;
+}
+/* Bootstrap button */
+.btn-secondary:not(:disabled):not(.disabled).active,
+.btn-secondary.active,
+.btn-secondary:hover,
+.btn-outline-secondary:not(:disabled):not(.disabled).active,
+.btn-outline-secondary:hover {
+    /* use same color as leaflet-locatecontrol */
+    color: #2074b6;
+    background-color: #e6e6e6;
+}
+
+button.btn {
+    box-shadow: none !important;
 }
 
 .leaflet-bar button {
