--- a/css/style.css
+++ b/css/style.css
@@ -256,13 +256,11 @@ https://css-tricks.com/svg-line-animation-works/
     width: 8px;
     margin-left: 1px;
     background-image: linear-gradient(to right, #f0f0f0 0%, #e9e9e9 100%);
-    box-shadow: inset -1px -0px 1px rgba(55, 55, 55, 0.3),
-        inset 1px 0px 1px rgba(230, 230, 230, 1);
+    box-shadow: inset -1px -0px 1px rgba(55, 55, 55, 0.3), inset 1px 0px 1px rgba(230, 230, 230, 1);
 }
 .slider.slider-horizontal .slider-track {
     background-image: linear-gradient(to bottom, #f0f0f0 0%, #e9e9e9 100%);
-    box-shadow: inset -0px -1px 1px rgba(55, 55, 55, 0.3),
-        inset 0px 1px 1px rgba(230, 230, 230, 1);
+    box-shadow: inset -0px -1px 1px rgba(55, 55, 55, 0.3), inset 0px 1px 1px rgba(230, 230, 230, 1);
 }
 
 .control-slider:hover #route .slider-track,
@@ -291,8 +289,7 @@ https://css-tricks.com/svg-line-animation-works/
     /* bootstrap .btn-secondary */
     background-image: linear-gradient(to bottom, #fff 0, #e0e0e0 100%);
     background-repeat: repeat-x;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15),
-        0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
     border: 1px solid #adadad;
 }
 
@@ -467,8 +464,7 @@ table.dataTable.display tbody tr.even:hover {
 }
 
 .tree-code {
-    font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console,
-        monospace;
+    font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
     margin-right: 7px;
     color: #666; /* like root nodes, jstree-disabled */
 }
@@ -497,8 +493,7 @@ table.dataTable.display tbody tr.even:hover {
 
     border: 1px solid #ddd;
 
-    font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console,
-        monospace;
+    font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
     line-height: 1.2em;
 }
 
