--- a/css/leaflet-routing.css
+++ b/css/leaflet-routing.css
@@ -3,3 +3,13 @@ div.line-mouse-marker {
     border: 4px solid magenta;
     border-radius: 8px;
 }
+
+.dist-marker {
+    font-size: 11px;
+    border: 1px solid #777;
+    border-radius: 10px;
+    text-align: center;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+    color: black;
+    background: rgba(255, 255, 255, 0.4);
+}
