--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,10 @@ table.dataTable.display tbody tr.odd:hover,
 table.dataTable.display tbody tr.even:hover {
     background-color: rgba(255, 255, 0, 0.2);
 }
+table.dataTable.hover tbody tr:hover.selected,
+table.dataTable.display tbody tr:hover.selected {
+    background-color: #bcc8b8;
+}
 
 /*
  * No-go areas
