--- a/css/style.css
+++ b/css/style.css
@@ -483,6 +483,12 @@ table.dataTable.display tbody tr:hover.selected {
     color: #737373;
 }
 
+#profile-pinned {
+    margin-left: auto;
+    margin-right: 4px;
+    color: #777;
+}
+
 .leaflet-sidebar-content {
     /* for optional-layers-tree */
     overflow-x: auto;
