--- a/css/style.css
+++ b/css/style.css
@@ -746,7 +746,7 @@ table.dataTable.display tbody tr:hover.selected {
 
 /*
  * Heightgraph customizations;
- * since the gradient types are empty, hide the legend as it's useless;
+ * since the legend and the gradient types are in the way, hide them;
  * since there's only the gradient layer, hide the layer selector.
  */
 .legend-hover {
