Add 20km allowed zone icon

--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,9 @@ input#trackname:focus:invalid {
 .pois-draw-enabled {
     cursor: cell;
 }
+.circlego-draw-enabled {
+    cursor: pointer;
+}
 
 #map {
     /* center error message horizontally */
