- add QR Code library to `js/library` subfolder and include it in Gulp build pipeline (MIT licensed; https://github.com/davidshimjs/qrcodejs; no npm package available) - add new modal dialog for displaying QR Code + some styles for this dialog in `css/style.css` - add button to export dialog which starts the QR Code generation - add additional argument `circlego` to BR.Export initializer - add QR Code generation logic to BR.Export

--- a/css/style.css
+++ b/css/style.css
@@ -438,6 +438,22 @@ button.btn {
     margin: -6px 0 6px 20px;
 }
 
+/* QR Code Dialog */
+
+#qrcode-img img {
+    max-width: 100%;
+}
+
+#qrcode-create-large {
+    display: none;
+}
+
+@media screen and (min-width: 500px) {
+    #qrcode-create-large {
+        display: inline-block;
+    }
+}
+
 /*
 * DataTables
 */
