--- a/css/style.css
+++ b/css/style.css
@@ -764,3 +764,9 @@ table.dataTable.display tbody tr:hover.selected {
 #selectionText {
     display: none;
 }
+
+.version-new::after {
+    font-family: FontAwesome;
+    content: '\f06a'; /* fa-exclamation */
+    margin-left: 3px;
+}
