- add a new button "Share" to the main navigation - when clicked, a new modal dialog opens and shows share options for the planned route, which are currently:   - a button to copy the URL of the current route to the clipboard   - share buttons for 3rd party services, such as Facebook, Whatsapp, Email (and Mastodon, but currently disabled via config[^1])   - a QRCode - the QRCode is a representation of the current route (i.e. the current URL) with an added query parameter to the URL: `?export=dialog` - when BRouter-Web is loaded with the `export=dialog` query parameter, the export dialog is shown instantly (as discussed in #370)   - using a query parameter (`export`) and a value (`dialog`) instead of only a paramater is required, because `URLSearchParams` needs both when adding a new parameter   - we've the opportunity to add further options in the future (`download`, `gpx` etc.) - add a new keyboard shortcut 'A' (“action”) which opens the share dialog (would have used 'S', but that's already taken) - add 3rd-party QRCode library - add `URLSearchParams` polyfill for ancient browsers as Husky didn't allow me to commit otherwise … - add license information to README
[^1]: Mastodon instances respond with HTTP 502 when the submitted text (= the route URL in our case) is longer than the maximum post character limit on that instance. That will probably confuse users. I decided to keep the code here as this bug will probably be fixed in the future.

--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,68 @@ button.deactivate-beeline-active.disabled {
     margin: -6px 0 6px 20px;
 }
 
+/* Share Dialog */
+
+#share-qrcode-img img {
+    max-width: 100%;
+}
+
+.btn-group-xs > .btn,
+.btn-xs {
+    padding: 0.1rem 0.4rem;
+    font-size: 0.75rem;
+    line-height: 1.5;
+    border-radius: 0.2rem;
+}
+
+.btn-facebook {
+    background-color: #3b5998;
+    border-color: #3b5998;
+    color: #fff;
+}
+
+.btn-facebook:hover {
+    background-color: #2d4373;
+    border-color: #2d4373;
+    color: #fff;
+}
+
+.btn-whatsapp {
+    background-color: #25d366;
+    border-color: #25d366;
+    color: #fff;
+}
+
+.btn-whatsapp:hover {
+    background-color: #1da851;
+    border-color: #1da851;
+    color: #fff;
+}
+
+.btn-email {
+    background-color: #e74c3c;
+    border-color: #e74c3c;
+    color: #fff;
+}
+
+.btn-email:hover {
+    background-color: #c0392b;
+    border-color: #c0392b;
+    color: #fff;
+}
+
+.btn-mastodon {
+    background-color: #2b90d9;
+    border-color: #2b90d9;
+    color: #fff;
+}
+
+.btn-mastodon:hover {
+    background-color: #1d5bbf;
+    border-color: #1d5bbf;
+    color: #fff;
+}
+
 /* "What's new?" (Change Log) */
 #whatsnew h2 {
     margin: 2rem 0;
